--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,13 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
-  /* margin: 50px; */
 }
 .main_container {
-  width: 500px;
-  height: 180px;
+  min-width: 300px;
+  box-sizing: border-box;
+  max-width: fit-content;
   border: 2px dashed blue;
   border-radius: 10px;
   background-color: rgb(228, 228, 246);
+  padding: 5px;
 }
